--- a/wp-content/themes/go/css/style.css
+++ b/wp-content/themes/go/css/style.css
@@ -47,7 +47,7 @@ body {
 .table-cell-1{
 	display: table-cell;
     vertical-align: top;
-	width: 230px;
+	width: 250px;
     position: relative;
     padding: 1em;
     border: 1px solid #ccc;
@@ -181,11 +181,6 @@ input:focus{
 	 padding: 0;
 	 width:100%;
 }
-.menutop{
-	 
-}
-
-
 #topmenu {
 	list-style-type:none;
 	text-decoration: none;
@@ -193,50 +188,20 @@ input:focus{
 	margin:0 auto;
 }
 #topmenu li{
-	float: right;
-	position: relative;
 	padding: 15px 0 0 0;
-	margin: 0px 19px -19px 0;
-	padding-left: 10px;
+	margin: 10px auto;
+	border-bottom: 1px dotted #60903B;
+	width: 90%;
+	text-align: center;
 }
 #topmenu li a {
-		margin-top: -16px;
-		padding: 22px;
-		padding-top: 10px;
 		letter-spacing: 0.2px;
 		font-family: 'Noto Serif', serif;
 		font-weight: bold;
-		color: #F9DDB2 ;
-		display: block;
-		filter: none;
-		background: #3a611a;
-		background: -webkit-gradient(linear,left bottom,left top,color-stop(0,#3a611a),color-stop(1,#729e31));
-		background: -ms-linear-gradient(bottom,#3a611a,#729e31);
-		background: -moz-linear-gradient(center bottom,#3a611a 0%,#729e31 100%);
-		background: -o-linear-gradient(#729e31,#3a611a);
-		-moz-background-clip: padding-box;
-		-webkit-background-clip: padding-box;
-		background-clip: padding-box;
-		/*Firefox*/
-		-moz-border-top-left-radius: 0.7em;
-		-moz-border-top-right-radius: 0.7em;
-		-moz-border-bottom-right-radius: 0em;
-		-moz-border-bottom-left-radius: 0em;
-		/*Safari, Chrome*/
-		-webkit-border-top-left-radius: 0.7em;
-		-webkit-border-top-right-radius: 0.7em;
-		-webkit-border-bottom-right-radius: 0em;
-		-webkit-border-bottom-left-radius: 0em;
-		border-top-left-radius: 0.7em;
-		border-top-right-radius: 0.7em;
-		border-bottom-right-radius: 0em;
-		border-bottom-left-radius: 0em;
-		-ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=0.3, Direction=90, Color=#333333)";/*IE 8*/
-	text-shadow: 0em 0em 0.3em #333333;/* FF3.5+, Opera 9+, Saf1+, Chrome, IE10 */
-	filter: progid:DXImageTransform.Microsoft.Shadow(Strength=0.3, Direction=90, Color=#333333); /*IE 5.5-7*/
+		color: #D69023;
 }
 #topmenu li a:hover{
-	color: #D69023;
+	color: #60903B;
 
 }
 .menuleft{
@@ -251,13 +216,10 @@ input:focus{
 .menuleft ul{
 	list-style-type:none;
 	text-decoration: none;
-	padding: 0px 1px 0.4px 0px;
-	margin:0 auto;
 
-	
 }
 ul#s > li {
-	 margin: 0px 0 0 20px;
+	 margin-left: 20px;
 	 list-style: none;
 	 float: left;
 	 text-align: center;
@@ -267,61 +229,34 @@ ul#s > li {
 }
 
 ul#s > li > a{
-	padding: 11px;
+	padding: 5px 10px 5px 10px;
 	letter-spacing: 0.2px;
-	font-size: 24px;
+	font-size: 20px;
 	font-family: 'Marck Script', serif;
 	font-weight: bold;
-	color: #60903B ;
+	color: #60903B;
 	display: block;
-	filter: none;
 
 }
 ul#s > li a:hover {
-	color: white!important;
-	background: -webkit-gradient(linear,left bottom,left top,color-stop(0,#3a611a),color-stop(1,#729e31));
-	background: -ms-linear-gradient(bottom,#3a611a,#729e31);
-	background: -moz-linear-gradient(center bottom,#3a611a 0%,#729e31 100%);
-	background: -o-linear-gradient(#729e31,#3a611a);
-	-moz-background-clip: padding-box;
-	-webkit-background-clip: padding-box;
-	background-clip: padding-box;
-	cursor: pointer;
-}
-.sub-menu{
-	display: none;
-	position: absolute;
-	z-index: 6;
-	top: 66px;
-}
-.sub-menu > li {
-	float: none;
-	text-align: center;
-	background: #7F7F7F;
-
-
-}
-.sub-menu > li:hover{
-	background: rgba(58, 97, 26, 0.48);
-}
-.sub-menu li a {
-	color: #474747;
-	text-shadow: none;
-	font-family: arial, serif;
-	font-weight: bold;
-	font-style: normal;
-	display: block;
-
-	
-}
-.sub-menu li a:hover{
-	color: #474747;
-	display: block;
+         color:white;
+	    background: -webkit-gradient(linear,left bottom,left top,color-stop(0,#3a611a),color-stop(1,#729e31));
+		background: -ms-linear-gradient(bottom,#3a611a,#729e31);
+		background: -moz-linear-gradient(center bottom,#3a611a 0%,#729e31 100%);
+		background: -o-linear-gradient(#729e31,#3a611a);
+		-moz-background-clip: padding-box;
+		-webkit-background-clip: padding-box;
+		background-clip: padding-box;
+		border-radius: 13px 13px 13px 13px;
+		-moz-border-radius: 13px 13px 13px 13px;
+		-webkit-border-radius: 13px 13px 13px 13px;
+        cursor: pointer;
+                
 }
 /*Галвная меню*/
 .act{
 
-	color: green!important;
+	color:white !important;
     background: -webkit-gradient(linear,left bottom,left top,color-stop(0,#3a611a),color-stop(1,#729e31));
 	background: -ms-linear-gradient(bottom,#3a611a,#729e31);
 	background: -moz-linear-gradient(center bottom,#3a611a 0%,#729e31 100%);
@@ -329,6 +264,13 @@ ul#s > li a:hover {
 	-moz-background-clip: padding-box;
 	-webkit-background-clip: padding-box;
 	background-clip: padding-box;
+	border-radius: 13px 13px 13px 13px;
+	-moz-border-radius: 13px 13px 13px 13px;
+	-webkit-border-radius: 13px 13px 13px 13px;
+	clear: both;
+	margin-bottom: 5px;
+	cursor: default !important;
+
 
 }
 
@@ -437,33 +379,62 @@ ul#s > li a:hover {
 	max-width: 150px;
 	
 }
-.prodaj{
-	width: 209px;
-	height: 150px;
-	position: absolute;
-	top: 300px;
-	left: 30%;
-	background: url(../img/sale.png) 0 0 no-repeat;
-	display: block;
+.gallery-item:hover{
+		-webkit-transform: scale(1.1);
+		-moz-transform: scale(1.1);
+		-o-transform: scale(1.1);
+		transform: scale(1.1);
 }
-.prodaj:hover{
-	background: url(../img/sale-hover.png) 0 0 no-repeat;
-}
-.cont{
+.cont ul{
+	display: table;
+	width: 100%;
 
 }
 .cont ul li {
 	float: left;
-	padding: 14px;
-	margin-top: 18px;
+	padding: 2px 0 0 32px;
 	list-style-type:none;
 }
+.cont ul p{
+	text-align: center;
+	font-size: 32px;
+	font-family: 'Marck Script', serif;
+	font-weight: 500;
+	color: #0000EE;
+}
+.letter{
+    margin-top:10px ;
+    
+}
+.letter p{
+    text-align: center;
+    font-size: 24px;
+    font-family: 'Marck Script', serif;
+    font-weight: 500;
+    color: #0000EE;
+}
+#poch {
+	margin: 0 auto;
+	background: url(../img/poch.png) 0 0 no-repeat;
+        width: 100px;
+        height: 100px;
+        display: block;
+}
+#poch:hover{
+	background: url(../img/poch-hover.png) 0 0 no-repeat;
+	
+        width: 100px;
+        height: 100px;
+}
+	
 #ok i {
 	color: orange;
-
 }
-.sotset{
-	margin-top: 10px;
+#vk i {
+	color: #615FB9;
+}
+#fecbook i{
+	color::#336699;
 }
 textarea {
     width: 90%;
@@ -473,11 +444,6 @@ textarea {
     padding: 5px;
 }
 /* Категория */
-.gatpost{
-	border: 1px solid #000;
-	margin:10%;
-	padding:3%;
-}
 .katalog { /* общие стили для блока */
 width: 99%; /* общая ширина блока */
 margin: 0 auto; /* внешние отступы сверху и снизу, а также выравнивание по центру */
@@ -600,13 +566,11 @@ background-color:#345;
     border-bottom: 2px solid red;
 }
 .hr {
-		width: 71%;
+		width: 100%;
 		border: 0;
 		height: 1px;
 		background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0, 88, 36, 0.75), rgba(0,0,0,0));
 		background-image: -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
 		background-image: -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
 		background-image: -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
-		position: absolute;
-		top: 105px;
 }
