--- a/wp-content/themes/go/css/style.css
+++ b/wp-content/themes/go/css/style.css
@@ -294,7 +294,7 @@ ul#s > li a:hover {
 	    text-decoration: none;
 	    text-transform: none;
 	    font-style: normal;
-	    font-size: 100%;
+	    font-size: 83%;
 	    line-height: 1.7;
 	    letter-spacing: 0.1em;
 	    word-spacing: 0em;
@@ -325,8 +325,8 @@ ul#s > li a:hover {
 
 .myfooter img{
 		
-		padding: 0;
-		position: relative;
+            padding: 0;
+            position: relative;
 	    width: 100%;
 	    left: 0;
 	    bottom: 0;
@@ -592,16 +592,37 @@ background-color:#345;
   bottom: 10px; left: 10px; right: 10px;
 }
 .hr {
-		width: 100%;
-		border: 0;
-		height: 1px;
-		background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0, 88, 36, 0.75), rgba(0,0,0,0));
-		background-image: -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
-		background-image: -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
-		background-image: -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
+    width: 100%;
+    border: 0;
+    height: 1px;
+    background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0, 88, 36, 0.75), rgba(0,0,0,0));
+    background-image: -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
+    background-image: -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
+    background-image: -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,0.75), rgba(0,0,0,0));
 }
 .commentlist li {
-	padding: 60px;
+    padding: 19px;
+    display: table;
+    width: 100%;
+}
+.comall{
+    float: left;
+    width: 17%;
+    border: 1px solid green;
+}
+.comtxt{
+    border: 1px solid red;
+    float: right;
+    width: 82%;
+   
+}
+.comment_wrap{
+    border: 2px solid;
+    display: table;
+    width: 100%;
+}
+.comment_wrap p {
+    padding: 0;
 }
 .commentlist li:nth-child(odd){
 	background: #D8E2D7;
